# lidar_related_practices

./: README.md
clustering/: CMakeLists.txt
clustering/src/: clustering.cpp
obstacle_detection/: CMakeLists.txt
obstacle_detection/src/: obstacle_detection.cpp  point_cloud_processor.h
rendering/: CMakeLists.txt
rendering/src/: car.h  common.h  lidar.h  rendering.cpp
segmentation/: CMakeLists.txt
segmentation/src/: segmentation.cpp
